--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -417,7 +417,16 @@ body.collapseHeader {
         padding-top: 40px;
         background: #dadada;
         .transition(all, 0.1s, ease);
-
+        
+        /*&:after {
+            content: '';
+            display: block;
+            width: 100%;
+            background: @headerbackground;
+            height: @heightOfHeader;
+            position: absolute;
+            top: -@heightOfHeader;
+        }*/
         .wrapper {
             margin: 0 auto;
         }
